# smart-lock

./: .env  .env.backend  .env.camera  .env.celery  .env.celery-service  .env.db  .env.image_processor  .env.server-api  .gitignore  Makefile  client-service.ini  docker-compose.yaml  force_lock.py  requirements.txt
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/source/api/: app.py
backend/source/api/access/: api.py  settings.py
backend/source/api/employee/: api.py  settings.py
backend/source/api/employee_images/: api.py  settings.py
backend/source/api/emplyee_images/: api.py  settings.py
backend/source/api/file/: api.py  settings.py
backend/source/api/identification/: api.py  settings.py
backend/source/api/users/: __init__.py  api.py  utils.py
backend/source/celery_app/: __init__.py  app.py
backend/source/database/: __init__.py  db.py
backend/source/database/migrations/: env.py  script.py.mako
backend/source/database/models/: __init__.py  employee.py  employee_image.py  user.py
backend/source/database/repos/: __init__.py  base.py  employee.py  employee_image.py
backend/source/file_db/: __init__.py  client.py  settings.py
backend/source/schemas/access/: __init__.py  forms.py  params.py
backend/source/schemas/common/: __init__.py  forms.py  sort.py
backend/source/schemas/employee/: common.py  params.py  responses.py
backend/source/schemas/employee_images/: common.py  forms.py  params.py  responses.py
backend/source/schemas/employees/: bodies.py  common.py  params.py  responses.py
backend/source/services/: access.py  employee.py  employee_images.py  file.py
celery_service/: Dockerfile  pyproject.toml
celery_service/source/: main.py
celery_service/source/celery_app/: __init__.py  settings.py
celery_service/source/tasks/: __init__.py
(+126 files in other folders)
