[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "argon2-cffi-bindings==21.2.0",
    "argon2-cffi==23.1.0",
    "bcrypt==4.2.0",
    "cffi==1.17.1",
    "click==8.1.7",
    "cryptography==43.0.3",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi==0.115.5",
    "fastapi-users==14.0.0",
    "fastapi-users-db-sqlalchemy==6.0.1",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "idna==3.10",
    "makefun==1.15.6",
    "mako==1.3.6",
    "markupsafe==3.0.2",
    "pwdlib==0.2.1",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pyjwt==2.9.0",
    "python-multipart==0.0.17",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.36",
    "starlette==0.41.2",
    "typing-extensions==4.12.2",
    "uvicorn==0.32.0",
    "pgvector>=0.3.6",
    "aiobotocore>=2.16.0",
    "botocore>=1.35.81",
    "pydantic-settings>=2.7.0",
    "setuptools>=75.7.0",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.4.0",
]
