[project]
name = "celery_service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "celery[redis]>=5.4.0",
    "face-recognition-models>=0.3.0",
    "face-recognition>=1.3.0",
    "fastapi>=0.115.6",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "setuptools>=75.8.0",
    "aiobotocore>=2.18.0",
    "sqlalchemy>=2.0.37",
    "alembic>=1.14.1",
    "pgvector>=0.3.6",
    "mako>=1.3.8",
    "botocore>=1.36.1",
    "asyncpg>=0.30.0",
]
